# AIGlasses

./: .gitignore  A2Firmware.ino  AIglasses.kicad_sch  CMakeLists.txt  FullFirmware.ino  config.json.template  gem_a2a_5g.py  gemini_audio-audio_lte.py  gemini_code_lte-m.py  servert.py  sft_rst.py
AIGlassesFirmware/: CMakeLists.txt  FIX_INTELLISENSE.md  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32c6
AIGlassesFirmware/docs/: ARCHITECTURE.md  LIBRARY_CHECK.md  QUICK_FIX.sh  TROUBLESHOOTING.md
AIGlassesFirmware/include/: audio_packetizer.h  ble_audio.h  config.h  i2s_mic.h
AIGlassesFirmware/src/: audio_packetizer.cpp  ble_audio.cpp  i2s_mic.cpp  main.cpp
AIglasses/: settings.gradle.kts
AIglasses/app/: build.gradle.kts
C6Imp/: README.md  platformio.ini
C6_App_imp/: C6_App_imp.ino  README.md  platformio.ini
Doccumentation/: COMPILATION_FIXES.md  ESP32C6_I2S_LIMITATION.md  MODULAR_ARCHITECTURE.md  PCM_VISUALIZATION_GUIDE.md  PLATFORMIO_GUIDE.md  PLATFORMIO_SETUP_COMPLETE.md  QUICK_START.md  QUICK_START_MODULAR.md  README.md  README_WITH_SPEAKER.md  REFACTORING_COMPLETE.md
agent/: audio_agent.py  audio_apis.py  helpers.py
archive/: gemini-audio.py  gemini_audio-audio_lte.py  gemini_code.py  gemini_code_lte-m.py  gemini_lte.py
main/: CMakeLists.txt  WalterCOMM.cpp  WalterCOMM.h  WalterOpenAI.cpp  WalterOpenAI.h  audio_agent.cpp  audio_agent.h  idf_component.yml  main.cpp  walter_com.cpp  walter_com.h  walter_spiffs.cpp  walter_spiffs.h
misc/: parse_error_msg.txt
spiffs_data/: config.json.template
walter_modem/: core.py
(+25 files in other folders)
